--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
 
+    //Material
+    def supportlibVersion = '1.2.0'
+    implementation "com.google.android.material:material:$supportlibVersion"
 }
